WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73606
[Win] Changes to localStorageDatabasePath don't have any effect on Windows
https://bugs.webkit.org/show_bug.cgi?id=73606
Summary
[Win] Changes to localStorageDatabasePath don't have any effect on Windows
Steve Falkenburg
Reported
2011-12-01 17:09:27 PST
Changes to localStorageDatabasePath don't have any effect on Windows
Attachments
Patch
(1.69 KB, patch)
2011-12-01 17:11 PST
,
Steve Falkenburg
no flags
Details
Formatted Diff
Diff
Patch
(1.73 KB, patch)
2011-12-01 17:14 PST
,
Steve Falkenburg
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Steve Falkenburg
Comment 1
2011-12-01 17:11:28 PST
Created
attachment 117527
[details]
Patch
Steve Falkenburg
Comment 2
2011-12-01 17:14:07 PST
Created
attachment 117528
[details]
Patch
Steve Falkenburg
Comment 3
2011-12-02 09:05:23 PST
http://trac.webkit.org/changeset/101808
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug