Changes to localStorageDatabasePath don't have any effect on Windows https://bugs.webkit.org/show_bug.cgi?id=73606 <rdar://problem/10491296>

Reviewed by Darin Adler.

* WebView.cpp:
(WebView::notifyPreferencesChanged): Propagate local storage path change to m_page's settings.



Canonical link: https://commits.webkit.org/90279@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101808 268f45cc-cd09-0410-ab3c-d52691b4dbfc